# sarnetlog

./: LICENSE  README.md
injector/: Cargo.toml
injector/src/: main.rs
logger/: Cargo.toml
logger/src/: lib.rs
logger/src/hooks/: mod.rs  patterns.rs
logger/src/hooks/json_serialize/: mod.rs
logger/src/hooks/monostring_create/: mod.rs
logger/src/hooks/net_outgoing_message/: mod.rs
logger/src/hooks/websockets/: mod.rs  send_message.rs  write_bool.rs  write_float.rs  write_int16.rs  write_int8.rs  write_string.rs  write_uint32.rs
logger/src/memory/: mod.rs  scanner.rs
logger/src/mono/: method_info.rs  mod.rs  net_buffer.rs  net_outgoing_message.rs  string.rs
logger/src/utils/: asm.rs  filesystem.rs  mod.rs  module_info.rs  terminal.rs
