[package]
name = "logger"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
minhook = "0.6.0"
serde_json = "1.0.133"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
panic = "abort"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse"
]
